# sdag

./: '  .gitignore  :  README.md  balatro_seed.py  pyproject.toml
src/sdag/: __init__.py  builder.py  dag.py  executors.py  node.py  result.py  runner.py  state.py
src/thomas/: builder.py  dag.py  exceptions.py  executors.py  node.py  queue.py  state.py
tests/: conftest.py  test_builder.py  test_dag_run.py  test_policies.py
