[project]
name = "sdag"
version = "0.1.0"
description = "Small DAGs for smalld data"
readme = "README.md"
authors = [
    { name = "john-marinelli", email = "marinelli.john@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numba>=0.61.2",
    "pathos>=0.3.4",
    "polars>=1.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]

testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "-ra"
]
